# vasal

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/vasal-core/: Cargo.toml  build.rs
crates/vasal-core/debian/: config.toml  postinst  postrm  prerm  vasal.service
crates/vasal-core/src/: audit.rs  auth.rs  config.rs  credential.rs  heartbeat.rs  lib.rs  main.rs  metrics.rs  self_upgrade.rs  state.rs  telemetry.rs
crates/vasal-core/src/auth/: mod.rs  token.rs
crates/vasal-core/src/task/: chain.rs  continuous.rs  mod.rs  router.rs  shell.rs  sidecar.rs
crates/vasal-core/src/transport/: grpc.rs  mod.rs  poll.rs
crates/vasal-core/src/unit/: health.rs  install.rs  mod.rs  upgrade.rs
crates/vasal-core/tests/: grpc_e2e.rs  integration.rs
crates/vasal-protocol/: Cargo.toml
crates/vasal-protocol/src/: credential.rs  error.rs  heartbeat.rs  jsonrpc.rs  lib.rs  sidecar.rs  task.rs  unit.rs
crates/vasal-protocol/tests/: proptest_roundtrips.rs
crates/vasal-sidecar-sdk/: Cargo.toml
crates/vasal-sidecar-sdk/src/: codec.rs  handler.rs  lib.rs  server.rs
docs/: architecture.md  plan.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_codec.rs  fuzz_jsonrpc.rs  fuzz_task.rs
notes/: arch.md
proto/vasal/v1/: dispatch.proto
sidecars/ebpf-observer/: Cargo.toml
sidecars/ebpf-observer/src/: main.rs
sidecars/echo-ctrl/: Cargo.toml
sidecars/echo-ctrl/src/: main.rs
sidecars/sql-ctrl/: Cargo.toml
sidecars/sql-ctrl/src/: main.rs
