[workspace]
members = [
    "crates/vasal-protocol",
    "crates/vasal-sidecar-sdk",
    "crates/vasal-core",
    "sidecars/echo-ctrl",
    "sidecars/sql-ctrl",
    "sidecars/ebpf-observer",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
tempfile = "3"
thiserror = "2"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"
tokio-stream = "0.1"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "http-proto", "reqwest-client"] }
tracing-opentelemetry = "0.32"

vasal-protocol = { path = "crates/vasal-protocol" }
vasal-sidecar-sdk = { path = "crates/vasal-sidecar-sdk" }
