[package]
name = "vasal-core"
description = "Vasal — a lightweight, protocol-first, general-purpose host agent"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors = ["Vasal Contributors"]

[[bin]]
name = "vasal"
path = "src/main.rs"

[lib]
name = "vasal_core"
path = "src/lib.rs"

[dependencies]
vasal-protocol = { workspace = true }
vasal-sidecar-sdk = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rusqlite = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio-stream = { workspace = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[features]
default = []
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
vasal-protocol = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }

[package.metadata.deb]
name = "vasal"
priority = "optional"
section = "admin"
copyright = "2024-2026, Vasal Contributors"
depends = "$auto, systemd"
maintainer-scripts = "debian/"
systemd-units = { unit-name = "vasal", enable = false, start = false }
assets = [
    ["target/release/vasal", "usr/bin/", "755"],
    ["debian/config.toml",   "etc/vasal/config.toml", "640"],
]
conf-files = ["/etc/vasal/config.toml"]
