[package]
name = "vasal-protocol"
description = "Canonical protocol types for the Vasal agent"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = "1"
serde_json = { workspace = true }
