[package]
name = "sql-ctrl"
description = "Reference sidecar — SQL query execution via SQLite (extensible to MySQL/Postgres)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
vasal-protocol = { workspace = true }
vasal-sidecar-sdk = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
